Fixes alignment of text on top users stats column

--- a/app/assets/stylesheets/stats.css.scss
+++ b/app/assets/stylesheets/stats.css.scss
@@ -30,3 +30,7 @@ div#top-users-tag.three.panel.columns {
 div#top-users-tag.three.panel.columns h4, h5 {
   margin: 0px;  
 }
+
+.top-user-text {
+  margin-top: 8px;
+}
